data/all_generated_tests/raw_wast_tests/unreachable_IncorrectBranchTargetResolution_918.wast
;; 9. **Test Description:** Use a combination of `unreachable`, `call`, and `br` instructions to ensure callable functions containing `unreachable` are properly skipped, validating targets are correctly jumped.    - **Constraint Checked:** Ensures function calls and branching skip `unreachable` properly.    - **Incorrect Branch Target Relation:** Tests proper execution of call and branch instructions, ensuring branches target the correct function parts.

(assert_invalid
  (module 
    (func $type-br-call-after-unreachable
      (unreachable) (call $dummy))
    (func $dummy (br 0) (i32.const 1))
  )
  "type mismatch"
)